--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
             <div class="item">
               <div class="item__img img__noodles"></div>
-              <div class="item__title">Loaded Nachos</div>
+              <div class="item__title">Hakka Noodles</div>
             </div>
 
             <!-- --------------------------------------- -->
