--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
         </div>
       </main>
       <div class="description">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ducimus
-        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       </div>
     </div>
     <script src="./script.js"></script>
