--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
       </main>
       <div class="description">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing ellit.</p>
       </div>
     </div>
     <script src="./script.js"></script>
